--- a/WineryApp/pom.xml
+++ b/WineryApp/pom.xml
@@ -11,7 +11,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<junit.version>5.10.2</junit.version>  </properties>
+    <junit.version>5.10.2</junit.version>
+    <javafx.version>23.0.1</javafx.version>
+  </properties>
 
   <dependencies>
     <dependency>
