Update over the .gitignore file

--- a/WineryApp/.gitignore
+++ b/WineryApp/.gitignore
@@ -4,10 +4,12 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/compiler.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
-.idea/compiler.xml
+.idea/workspace.xml
 .idea/libraries/
+.idea/shelf/
 *.iws
 *.iml
 *.ipr
