--- a/WineryApplication/pom.xml
+++ b/WineryApplication/pom.xml
@@ -7,7 +7,12 @@
     <groupId>com.oopproject</groupId>
     <artifactId>WineryApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>WineryApplication</name>
+    <modules>
+        <module>data</module>
+        <module>wsfcw</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,19 +49,11 @@
             <artifactId>fontawesomefx</artifactId>
             <version>8.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
         <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.6.3.Final</version>
+            <groupId>com.data</groupId>
+            <artifactId>data-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.4</version>
-        </dependency>
-
     </dependencies>
 
     <build>
