--- a/WineryApplication/.gitignore
+++ b/WineryApplication/.gitignore
@@ -4,12 +4,8 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/workspace.xml
-.idea/libraries/
-.idea/shelf/
+.idea/
+
 *.iws
 *.iml
 *.ipr
