--- a/WineryApplication/.gitignore
+++ b/WineryApplication/.gitignore
@@ -10,6 +10,9 @@ target/
 .idea/workspace.xml
 .idea/libraries/
 .idea/shelf/
+.idea/dataSources
+.idea/dataSources.xml
+.idea/dataSources.local.xml
 *.iws
 *.iml
 *.ipr
