--- a/WineryApplication/.gitignore
+++ b/WineryApplication/.gitignore
@@ -4,15 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/workspace.xml
-.idea/libraries/
-.idea/shelf/
-.idea/dataSources
-.idea/dataSources.xml
-.idea/dataSources.local.xml
+.idea/
 *.iws
 *.iml
 *.ipr
